# polynomials

./: .gitignore  CMakeLists.txt  README.md
include/: univariatelegendre.h  univariatepolynomial.h
tests/: CMakeLists.txt  calculus_test.cpp  compactify_test.cpp  init_test.cpp  legendre_test.cpp
